Add tiny types and experiment with Java 23 switch statements